force-app/main/default/objects/ssot__InsurancePolicyParticipant__dlm/fields/ssot__IsActiveParticipant__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsActiveParticipant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active Participant</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsActiveParticipant</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>