force-app/main/default/objects/ssot__InsurancePolicyParticipant__dlm/fields/ssot__IsPolicyholder__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsPolicyholder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Policyholder</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsPolicyholder</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>