force-app/main/default/objects/ssot__InsurancePolicyParticipant__dlm/fields/ssot__SharePercent__c.field-meta.xml
<CustomField>
    <fullName>ssot__SharePercent__c</fullName>
    <label>Share Percent</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SharePercent</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>