force-app/main/default/objects/ssot__InsurancePolicyParticipant__dlm/fields/ssot__StandardTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__StandardTaxAmount__c</fullName>
    <label>Standard Tax Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>StandardTaxAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>